Adjust collapse on cards for Admin Dashboard. Adjust collapse on cards for Client dashboard. Adjust collapse on cards for Reviewer Dashboard. Fix toggle icon size for collapse menu.

--- a/vue-firebase-app/src/assets/styles/styles.css
+++ b/vue-firebase-app/src/assets/styles/styles.css
@@ -138,6 +138,21 @@ form {
   margin-right: 140px;
 }
 
+.col-sm-2 {
+  margin-left: auto;
+  margin-right: auto;
+}
+.card {
+  min-height: 165px;
+}
+
+.card-body {
+  justify-content:center;
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: auto;
+}
+
 /* Margin Radio Button */
 .radioButton {
   margin-right: 10px;
@@ -173,6 +188,7 @@ table {
   padding: 12px;
   width: 100%;
   border: 1px solid #ddd;
+  font-family: Glacial Indifference;
 }
 
 /* Button */
